Bug 124213 - A recovered document has "(Remote)" in the title
Summary: A recovered document has "(Remote)" in the title
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.0.2
Keywords: bibisectRequest, regression
Depends on:
Blocks: Titlebar
  Show dependency treegraph
 
Reported: 2019-03-19 18:34 UTC by Telesto
Modified: 2024-07-26 06:46 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-03-19 18:34:45 UTC
Description:
A recovered document has "(Remote)" in the title

Steps to Reproduce:
1. Open a new Writer document
2. Kill the proces tree in the ask manager
3. Restart LibreOffice & click restore/start
4. Notice "(Remote)"

Actual Results:
Shows remote

Expected Results:
Probably not.. not sure what it would mean


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+
Build ID: bbf9b65f91e8136fa1a2e17960944b8720f5d58e
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-03-15_09:56:33
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: threaded
Comment 1 mulla.tasanim 2019-03-27 22:26:17 UTC
Thank you for reporting the bug.

I can confirm that the bug is present in

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 91cdf22b88a4f7bec243c8fb187627e766d3294c
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-08_00:38:10
Locale: en-US (en_US); UI-Language: en-US
Calc: CL


In:
Version: 6.2.1.2 (x64)
Build ID: 7bcb35dc3024a62dea0caee87020152d1ee96e71
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

After Killing the process in Task Manager when I am Restarting LibreOffice Its not showing restore window so I can not notice "(Remote)" in Title
Comment 2 Xisco Faulí 2019-03-28 12:17:03 UTC
Hello mulla.tasanim,
thanks for checking. Then we can consider it a regression...
Comment 3 Buovjaga 2019-04-21 17:59:40 UTC
I don't get the recovery dialog with the bibisect repo. I wonder, how I might change this?
Comment 4 Telesto 2019-04-21 18:51:54 UTC
(In reply to Buovjaga from comment #3)
> I don't get the recovery dialog with the bibisect repo. I wonder, how I
> might change this?

Recovery dialog shows up for me normally (also in bibisect mode (tested 6.2 only).. However also heaving trouble in the range required, with the portable builds at hand

Good:
Versie: 5.0.0.1 
Build ID: 9a0b23dd0ab9652e0965484934309f2d49a7758e
Locale: nl-NL (nl_NL)

Bad 
LO5242
Comment 5 QA Administrators 2022-08-18 03:40:48 UTC Comment hidden (obsolete)
Comment 6 raal 2022-11-01 19:51:34 UTC
No repro with Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cfc8a8f5d841b3f84d207196153be67da7f60652
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 7 Rajasekaran Karunanithi 2023-01-25 11:32:31 UTC
Can't reproduce in LO 7.6 Dev build under Windows 10(x64).


Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1c638b7ac46d8077994c8483e6becc4a33efd12b
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-IN (en_IN); UI: en-US
Calc: threaded
Comment 8 Buovjaga 2023-01-25 11:38:20 UTC
Telesto: per the recent test results, do you still see this?
Comment 9 Mike Kaganski 2024-07-25 18:43:14 UTC
1. It is repro using 7.6.0.
2. It is *not* reproducible using 24.2.0.

In 7.6.0, it is *only* reproducible using steps from comment 0 *literally*, i.e. opening a new document, and killing it. If you open an existing document, the problem won't appear. If you edit the new document, and let it auto-save, the problem won't appear. Only a non-existing non-saved document would trigger this.

The disappearance of the problem in 24.2+ is likely due to Justin's great improvements in the autorecovery area. However, that is only a guess. And I recall that some changes were reverted, at least temporarily - so maybe that would be still a problem.

Regression *in version 5.1* after: 26c106a5aeca3e50d1e3c3d37e622b2743a23bca "append '(Remote)' in the titlebar when remote file is opened" (unsurprisingly, isn't it?).

I believe that there is still a bug in the logic of "is this remote" check; simply we stopped to recover absent documents.
Comment 10 Mike Kaganski 2024-07-25 19:14:16 UTC
https://gerrit.libreoffice.org/c/core/+/171027
Comment 11 Mike Kaganski 2024-07-25 19:21:07 UTC Comment hidden (obsolete)
Comment 12 Mike Kaganski 2024-07-25 19:23:57 UTC
To reproduce in current versions, add this line to registrymodifications.xcu, after existing "SessionData" line (the placement is important here):

<item oor:path="/org.openoffice.Office.Recovery/RecoveryList"><node oor:name="recovery_item_1" oor:op="replace"><prop oor:name="Title" oor:op="fuse"><value>Untitled 1</value></prop><prop oor:name="Filter" oor:op="fuse"><value>writer8</value></prop><prop oor:name="Module" oor:op="fuse"><value>com.sun.star.text.TextDocument</value></prop><prop oor:name="TempURL" oor:op="fuse"><value></value></prop><prop oor:name="ViewNames" oor:op="fuse"><value></value></prop><prop oor:name="OriginalURL" oor:op="fuse"><value></value></prop><prop oor:name="TemplateURL" oor:op="fuse"><value></value></prop><prop oor:name="DocumentState" oor:op="fuse"><value>0</value></prop></node></item>
Comment 13 Justin L 2024-07-25 20:14:23 UTC
(In reply to Mike Kaganski from comment #9)
>  I recall that some changes were reverted
That doesn't affect this case. Unnamed, unmodified documents are still not recovered.

Yes, the fact that there is now no file recovery happening at all for this unmodified document is due to commit 9e0f13b2c4d31537162434b5b932b265c62349e0
Author: Justin Luth on Thu Jul 20 16:29:41 2023 -0400
    tdf#57414 autorecovery: don't always add every file to RecoveryList
Comment 14 Commit Notification 2024-07-25 21:09:26 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9b911aaa3d2c7258fd41a896b7d57ca8c2a476fb

tdf#124213: handle private URLs as non-remote

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2024-07-26 06:46:30 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/470295c39cea861558bc0db1a1d2074f9cf4504e

tdf#124213: handle private URLs as non-remote

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.